# Amazsel

./: .gitignore  README.md  pyproject.toml
amazsel/locators/: locators.py
amazsel/pages/: base_page.py  lang_page.py  login_page.py  main_page.py  register_page.py
amazsel/tests/: test_lang_page.py  test_login_page.py  test_main_page.py  test_register_page.py
tests/: test_amazsel.py
